@@ -1,0 +1,76 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
+ "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html>
+<head>
+  <!-- $Id$ -->
+  <!-- Copyright (c) 2007 INRIA -->
+  <title>pa_pragma</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <link rel="shortcut icon" href="c4logo.png" />
+  <style type="text/css"><!--
+    body { counter-reset: h2cnt }
+    h1 { text-align: center }
+    h2:before { content: counter(h2cnt) " - "; counter-increment: h2cnt }
+    h2 { border: 1px solid; text-align: center; background: #9bf }
+    h2 { counter-reset: h3cnt }
+    h3:before {
+      content: counter(h2cnt) "." counter(h3cnt) " - ";
+      counter-increment: h3cnt
+    }
+    p { text-align: justify; margin: 1em 1cm }
+    li { margin-left: 1cm }
+    pre {
+      border-left: silver solid 3px; margin-bottom: 1.5em; margin-left: 2cm;
+      padding-left: 1em; padding-right: 0.5em; line-height: 1.2
+    }
+    tt { font-weight: bold }
+    .value { background: #0f0 }
+  --></style>
+</head>
+<body>
+
+<h1>pa_pragma.cmo: syntax adding a directive #pragma</h1>
+
+<p>pa_pragma.cmo is a Camlp4 syntax extension adding a directive
+#pragma.  This directive takes an expression as parameter, which is
+evaluated at compile time by the preprocessor.
+
+It is useful, for example, when one wants to add a syntax
+extension, using the EXTEND statement, without having to put
+it in a separated file.</p>
+
+<p>Example in a file, adding a syntax for the statement 'repeat' and
+using it just after:</p>
+
+<pre>
+    #pragma
+      EXTEND
+        GLOBAL: expr;
+        expr: LEVEL "top"
+          [ [ "repeat"; e1 = sequence; "until"; e2 = SELF ->
+                <:expr< do { $e1$; while not $e2$ do { $e1$ } } >> ] ]
+        ;
+        sequence:
+          [ [ el = LIST1 expr_semi -> <:expr< do { $list:el$ } >>  ] ]
+        ;
+        expr_semi:
+          [ [ e = expr; ";" -> e ] ]
+        ;
+      END;
+    let i = ref 1 in
+    repeat print_int i.val; print_endline ""; incr i; until i.val = 10;
+</pre>
+
+<p>The compilation of this example (naming it "foo.ml") can be done with
+the command:</p>
+
+<pre>
+    ocamlc -pp "camlp4r q_MLast.cmo pa_extend.cmo pa_pragma.cmo" -I +camlp4 foo.ml
+</pre>
+
+<p>Notice that it is experimental and probably incomplete, for the
+moment.</p>
+
+</body>
+</html>
